Closed Bug 896326 Opened 11 years ago Closed 11 years ago

Accessibility may return empty lines where there are embedded objects

Categories

(Core :: Disability Access APIs, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: Jamie, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

Str:
1. Use the following code:
<div>a <a href="#">b</a> c</div>
2. Retrieve the accessible for the div.
3. Fetch the line at offset 0; e.g. call IAccessibleText::lineAtOffset(0, IA2_TEXT_BOUNDARY_LINE).
Expected: The offsets returned should be (0, 5).
Actual: The offsets returned are (0, 0).

I believe this is a fairly recent regression (in the last few weeks).
Blocks: getText*a11y
(In reply to James Teh [:Jamie] from comment #0)
> Str:
> 1. Use the following code:
> <div>a <a href="#">b</a> c</div>

do I understand correct that it must be at the end of document? When I tried to put something after it then it worked.
Interesting. If I put something after it, it works correctly as you say. However, it fails in the tweet composer on twitter.com (where I originally discovered this) which isn't right at the end of the document. I don't have a clue how to isolate that behaviour.
Summary: Accessibility returns empty lines where there are embedded objects → Accessibility may return empty lines where there are embedded objects
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #781002 - Flags: review?(trev.saunders)
Attachment #781002 - Flags: review?(trev.saunders) → review+
https://hg.mozilla.org/mozilla-central/rev/0f8523d1dfe9
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: