Bug 896326 - Accessibility may return empty lines where there are embedded objects, r=tbsaunde